--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-      - name: run database update
-        run: |
-          python update.py
+      # - name: run database update
+      #   run: |
+      #     python update.py
       - name: run csv_export
         run: |
           python csv_export.py
