--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,15 @@ jobs:
           python -m pip install -r requirements.txt
       
       - name: run database update
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         run: python update.py
       
       - name: run csv_export
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         run: python csv_export.py
       
       - name: Commit and push
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
