--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
@@ -15,15 +16,12 @@ jobs:
           python -m pip install -r requirements.txt
       
       - name: run database update
-        uses: actions/checkout@v3
         run: python update.py
       
       - name: run csv_export
-        uses: actions/checkout@v3
         run: python csv_export.py
       
       - name: Commit and push
-        uses: actions/checkout@v3
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
