--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,37 @@
 name: update database and push
 on: push
 jobs:
-  updatedb:
-    runs-on: ubuntu-latest
+  # updatedb:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up Python 3.x
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 3.11
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         python -m pip install -r requirements.txt
       
-      - name: run database update
-        run: python update.py
+  #     - name: run database update
+  #       run: python update.py
       
-      - name: run csv_export
-        run: python csv_export.py
+  #     - name: run csv_export
+  #       run: python csv_export.py
       
-      - name: Commit and push
-        run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git add -A  # or git add -A to add all files
-          git commit -m "Updated CSV Files"  # change this message if you want
-          git push origin main
+  #     - name: Commit and push
+  #       run: |
+  #         git config user.name "${GITHUB_ACTOR}"
+  #         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+  #         git add -A  # or git add -A to add all files
+  #         git commit -m "Updated CSV Files"  # change this message if you want
+  #         git push origin main
 
   # label of the container job
   postgres-job:
-    needs: updatedb
+    #needs: updatedb
     # containers must run in Linux based operating systems
     runs-on: ubuntu-latest
     # Docker Hub image that `postgres-job` executes in
@@ -78,7 +78,8 @@ jobs:
       
       - name: update postgresql db
         run: 
-          pgloader _database/database.sqlite postgresql:///postgres_db
+          pgloader _database/database.sqlite
+          postgresql://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432/postgres_db
       
       - name: Login to Heroku Container registry
         env: 
