--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,10 +85,10 @@ jobs:
       - name: Install Heroku Cli
         run: curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
       
-      - name: Login to Heroku Container registry
+      - name: Login to Heroku 
         env: 
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:login
+        run: heroku login
 
       - name: push DB changes to Heroku and reboot
         run: |
