--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,12 +85,12 @@ jobs:
       - name: Install Heroku Cli
         run: curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
       
-      - name: Login to Heroku Container Registry
-        env: 
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: |
-          heroku auth:login
-          heroku container:login
+      # - name: Login to Heroku Container Registry
+      #   env: 
+      #     HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      #   run: |
+      #     heroku auth:login
+      #     heroku container:login
 
       - name: push DB changes to Heroku and reboot
         run: |
