--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,5 +97,5 @@ jobs:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
           heroku pg:reset --confirm brucebot-discord --app ${{ secrets.HEROKU_APP_NAME }}
-          heroku pg:push postgres_db DATABASE_URL --app ${{ secrets.HEROKU_APP_NAME }}
+          heroku pg:push postgres_db postgresql-infinite-33030 --app ${{ secrets.HEROKU_APP_NAME }}
           heroku ps:restart --app ${{ secrets.HEROKU_APP_NAME }}
