--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,9 @@ jobs:
           --health-retries 5
 
     steps:
+      - name: Install PostgreSQL
+        run: apt-get install --yes postgresql
+
       - name: Install PostgreSQL client
         run: |
           apt-get update
