--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,12 +66,10 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Install PostgreSQL
-        run: apt-get install --yes postgresql
-
       - name: Install PostgreSQL client
         run: |
           apt-get update
+          apt-get install --yes postgresql
           apt-get install --yes postgresql-client
 
       - name: Install PGLoader
