--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: update database and push
 on:
-  push:
+  # push:
   schedule:
     - cron: '0 0 * * *'
 jobs:
@@ -29,7 +29,7 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add -A  # or git add -A to add all files
-          git commit -m "Updated CSV Files"  # change this message if you want
+          git commit -m "Updated Database and CSV Files $(date)"  # change this message if you want
           git push origin main
 
   # label of the container job
