--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,14 @@ jobs:
       
       - name: run csv_export
         run: python csv_export.py
+
+      - name: Check if there are any changes
+        id: verify_diff
+        run: |
+          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
       
       - name: Commit and push
+        if: steps.verify_diff.outputs.changed == 'true'
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
