update and reenable workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: update database and push
 on:
   push:
-  #schedule:
-    #- cron: '0 3 * * *'
+  schedule:
+    - cron: '0 3 * * *'
 jobs:
   updatedb:
     runs-on: ubuntu-latest
