--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
@@ -24,18 +25,13 @@ jobs:
       - name: run csv_export
         run: python csv_export.py
 
-      - name: Check if there are any changes
-        id: verify_diff
+      - name: Commit
         run: |
-          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
-      
-      - name: Commit and push
-        if: steps.verify_diff.outputs.changed == 'true'
+          git config --local user.name "${GITHUB_ACTOR}"
+          git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git commit -am "Auto updated posts" || echo "No changes to commit"
+      - name: Push
         run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git add -A  # or git add -A to add all files
-          git commit -m "Updated Database and CSV Files $(date)"  # change this message if you want
           git push origin main
 
   # label of the container job
