--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,21 +65,17 @@ jobs:
           --health-retries 5
 
     steps:
-      # - name: update packages
-      #   run: |
-      #     apt-get update && apt upgrade -y
-  
-      - name: Install PGLoader
-        run: |
-          apt-get install --yes pgloader
-          
       - name: Install pgsql client
         run: |
           sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
-          apt-get update
+          apt-get update && apt-get upgrade -y
           apt-get install postgresql -y
           apt-get install postgresql-client -y
+
+      - name: Install PGLoader
+        run: |
+          apt-get install --yes pgloader
       
       - name: Check out repository code
         uses: actions/checkout@v3
